Update to Scala 3.1.0